chore: update display

--- a/src/chrome/hello.html
+++ b/src/chrome/hello.html
@@ -1,6 +1,83 @@
-<html>
-    <body>
-        <h1>BreezeAds Extensions</h1>
-        <script src="content.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>廣告</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            width: 300px;
+            margin: 0 auto;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 20px;
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+
+        .header div {
+            display: flex;
+            align-items: center;
+        }
+
+        .header button {
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+        }
+
+        .content {
+            margin-bottom: 20px;
+        }
+
+        .content h3 {
+            margin-bottom: 10px;
+        }
+
+        .content p {
+            font-size: 12px;
+        }
+
+        .footer {
+            font-size: 14px;
+            color: #888;
+        }
+    </style>
+</head>
+<body>
+<div class="container">
+    <div class="header">
+        <div>
+            <h3>Breeze Ads</h3>
+        </div>
+        <div>
+            <button>🌟</button>
+            <button>✋</button>
+            <button>🔲</button>
+        </div>
+    </div>
+    <div class="content">
+        <h3>Feature</h3>
+        <p>Skippable ad at the video's start, midway, or at the end.</p>
+        <p>Ads visible on the contents.</p>
+        <p>Support youtube music</p>
+    </div>
+    <div class="footer">
+        <a target="_blank" href="https://github.com/tianci-sh/BreezeAds">✋ Issue</a>
+    </div>
+</div>
+</body>
+<script src="content.js"></script>
+
 </html>
