chore: update content

--- a/src/chrome/hello.html
+++ b/src/chrome/hello.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>廣告</title>
+    <title>BreezeAds</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,8 +50,16 @@
         }
 
         .footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             font-size: 14px;
             color: #888;
+        }
+
+        .footer a {
+            color: #000;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -63,7 +71,7 @@
         </div>
         <div>
             <button>🌟</button>
-            <button>✋</button>
+            <button>🥰</button>
             <button>🔲</button>
         </div>
     </div>
@@ -72,9 +80,11 @@
         <p>Skippable ad at the video's start, midway, or at the end.</p>
         <p>Ads visible on the contents.</p>
         <p>Support youtube music</p>
+        <p>Skip disable plugin waring</p>
     </div>
     <div class="footer">
         <a target="_blank" href="https://github.com/tianci-sh/BreezeAds">✋ Issue</a>
+        <p>update at: 2024/06/26</p>
     </div>
 </div>
 </body>
