--- a/src/chrome/main.html
+++ b/src/chrome/main.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>BreezeAds</title>
-	<link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet" />
+	<link href="./assets/tailwindcssv2.2.19.css" rel="stylesheet" />
 </head>
 
 <body style="width: 400px">
