--- a/src/chrome/main.html
+++ b/src/chrome/main.html
@@ -27,12 +27,13 @@
 					<li>Ads visible on the contents.</li>
 					<li>Support youtube music</li>
 					<li>Skip disable plugin warning</li>
+					<li>Only hide e-commerce ad on video</li>
 				</ul>
 			</div>
 			<div class="mt-6 flex items-center justify-between">
 				<a href="https://github.com/tianci-sh/BreezeAds" target="_blank"
 					class="text-yellow-500 text-lg hover:underline">🖐 Issue</a>
-				<span class="text-sm text-gray-500">update at: 2024/06/02</span>
+				<span class="text-sm text-gray-500">update at: 2024/06/13</span>
 			</div>
 		</div>
 	</div>
