feat: slow down the playback rate of the 6-second ad.

--- a/src/chrome/main.html
+++ b/src/chrome/main.html
@@ -30,10 +30,18 @@
                 <li>Only hide e-commerce ad on video</li>
             </ul>
         </div>
+        <hr class="my-4 border-gray-300"/>
+        <div>
+            <h3 class="text-xl font-semibold text-gray-700">討論區</h3>
+            <ul class="list-disc list-inside text-gray-600 mt-2 space-y-1">
+                <li><a target="_blank" href="https://forum.gamer.com.tw/Co.php?bsn=60030&sn=2488537">巴哈🔗 (中文|Chinese)</a></li>
+                <li><a target="_blank" href="https://www.reddit.com/r/Adblock/comments/1geszgl/20241029_update_for_youtube_block/">Reddit🔗 (英文|English)</a></li>
+            </ul>
+        </div>
         <div class="mt-6 flex items-center justify-between">
             <a href="https://github.com/tianci-sh/BreezeAds" target="_blank"
                class="text-yellow-500 text-lg hover:underline">🖐 Issue</a>
-            <span class="text-sm text-gray-500">update at: 2025/01/26</span>
+            <span class="text-sm text-gray-500">update at: 2025/02/13</span>
         </div>
     </div>
 </div>
